name:                lambda
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/neilparikh/lambda#readme
license:             BSD3
license-file:        LICENSE
author:              Neil Parikh
maintainer:          parikh.neil@me.com
copyright:           2017 Neil Parikh
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable lambda
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  other-modules:       SimplyTyped.TypeChecker,
                       SimplyTyped.Types,
                       SimplyTyped.Parser
  build-depends:       base >= 4.7 && < 5,
                       containers,
                       parsec
